k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: push-notification-deployment
  labels:
    app: push-notification
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: push-notification
      version: v1
  template:
    metadata:
      labels:
        app: push-notification
        version: v1
    spec:
      serviceAccountName: push-notification-service-account
      containers:
        - name: push-notification
          image: docker.io/duynguyen03/push-notification:v2.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
