k8s/destinationRule.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: push-notification-service
spec:
  host: push-notification-service
  subsets:
    - name: v1
      labels:
        version: v1
